// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TooltipDefinition should allow the user to specify the direction 1`] = `
<TooltipDefinition
  align="start"
  className="custom-class"
  direction="top"
  tooltipText="tooltip text"
>
  <span
    className="bx--tooltip--definition bx--tooltip--a11y custom-class"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <button
      aria-describedby="definition-tooltip-3"
      className="bx--tooltip__trigger bx--tooltip--a11y bx--tooltip__trigger--definition bx--tooltip--top bx--tooltip--align-start"
      onBlur={[Function]}
      onFocus={[Function]}
      type="button"
    >
      tooltip trigger
    </button>
    <span
      className="bx--assistive-text"
      id="definition-tooltip-3"
      role="tooltip"
    >
      tooltip text
    </span>
  </span>
</TooltipDefinition>
`;

exports[`TooltipDefinition should render 1`] = `
<TooltipDefinition
  align="start"
  className="custom-class"
  direction="bottom"
  tooltipText="tooltip text"
>
  <span
    className="bx--tooltip--definition bx--tooltip--a11y custom-class"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <button
      aria-describedby="definition-tooltip-1"
      className="bx--tooltip__trigger bx--tooltip--a11y bx--tooltip__trigger--definition bx--tooltip--bottom bx--tooltip--align-start"
      onBlur={[Function]}
      onFocus={[Function]}
      type="button"
    >
      tooltip trigger
    </button>
    <span
      className="bx--assistive-text"
      id="definition-tooltip-1"
      role="tooltip"
    >
      tooltip text
    </span>
  </span>
</TooltipDefinition>
`;

exports[`TooltipDefinition should support a custom trigger element class 1`] = `
<TooltipDefinition
  align="start"
  className="custom-class"
  direction="bottom"
  tooltipText="tooltip text"
  triggerClassName="custom-trigger-class"
>
  <span
    className="bx--tooltip--definition bx--tooltip--a11y custom-class"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <button
      aria-describedby="definition-tooltip-2"
      className="bx--tooltip__trigger bx--tooltip--a11y bx--tooltip__trigger--definition custom-trigger-class bx--tooltip--bottom bx--tooltip--align-start"
      onBlur={[Function]}
      onFocus={[Function]}
      type="button"
    >
      tooltip trigger
    </button>
    <span
      className="bx--assistive-text"
      id="definition-tooltip-2"
      role="tooltip"
    >
      tooltip text
    </span>
  </span>
</TooltipDefinition>
`;
